# imu_3dm_gx4

./: CMakeLists.txt
script/: 99-imu-3dm-gx4.rules  add_rule
src/: imu_3dm_gx4.cpp
